--- a/WordSearchApp/app/src/main/AndroidManifest.xml
+++ b/WordSearchApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.joshvocal">
+    package="com.example.joshvocal" >
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".view.CreditsActivity" />
         <activity
-            android:name="com.example.joshvocal.view.MenuActivity"
-            android:screenOrientation="portrait">
+            android:name=".view.MenuActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +20,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.joshvocal.view.WordSearchActivity"
-            android:screenOrientation="portrait"></activity>
+            android:name=".view.WordSearchActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
